--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 <body>
     <div class="container p-0">
         <h1 class="text-center">XSS Fuzzer</h1>
+        <h3>Created by <a href="https://github.com/0xlipon" target="_blank">@0xlipon</a></h3>
         <form id="xssForm" class="form-inline">
             <div class="form-group">
                 <input type="url" class="form-control" id="urlInput" placeholder="http://testphp.vulnweb.com/search.php?test=" required>
