--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 </head>
 <body>
     <div class="container p-0">
-        <h1 class="text-center">XSS Fuzzer</h1>
+        <h1 class="text-center">XSS Fuzzer</h1> 
+        <h6 align="center">Created by <a href="https://github.com/0xlipon" target="_blank">@0xlipon</a></h6>
         <form id="xssForm" class="form-inline">
             <div class="form-group">
                 <input type="url" class="form-control" id="urlInput" placeholder="http://testphp.vulnweb.com/search.php?test=FUZZ" required>
